--- a/index.html
+++ b/index.html
@@ -52,6 +52,6 @@
   <h2 id="test">Your score:</h2>
   <h1 id="score"></h1>
 </div>
-  <script src="scripts.js"></script>
+  <script src="main.js"></script>
 </body>
 </html>
